@@ -17,6 +17,7 @@ class UDisks2Api : public QObject
 public:
     explicit UDisks2Api(QObject *parent = nullptr);
     int authOpen(const QString &device, const QString &mode = "rw");
+    void ejectDrive(const QString &device);
     bool formatDrive(const QString &device, bool mountAfterwards = true);
     QString mountDevice(const QString &device);
     void unmountDrive(const QString &device);
